fixed headers not aligning properly with correct skills column on mobile

--- a/src/components/styles/Portfolio.scss
+++ b/src/components/styles/Portfolio.scss
@@ -3,7 +3,7 @@
     width: 100%; 
     height: auto; //important, this makes it only take up the full viewport (not the entire webpage)
     z-index: 1;
-    margin-bottom: 4em;
+    padding-bottom: 3em;
     
 }
 
